<resources>

    <string name="app_name">OSE Application</string>
    <string name="logo_description">OSE logo</string>
    <string name="search">Search</string>
    <string name="synchronize">Synchronize</string>
    <string name="favourite">Favourite</string>
    <string name="about">About</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="date">Date</string>
    <string name="invalid_data">Invalid data entered</string>
    <string name="station_from">Station from</string>
    <string name="station_to">Station to</string>
    <string name="departure">Depart</string>
    <string name="arrival">Arrival</string>
    <string name="downloading">Downloading timesheets</string>
    <string name="processing">Processing timesheets</string>
    <string name="file_ok">Synchronization success</string>
    <string name="file_not_downloaded">File could not be downloaded</string>
    <string name="file_wrong_format">File could not be parsed correctly</string>

</resources>
