<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBackground"
    tools:context=".TimesheetActivity">

    <TextView
        android:id="@+id/txt_search_station_from"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/station_from"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/txt_search_station_to"
        app:layout_constraintHorizontal_weight="4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_search_station_to"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/station_to"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/txt_search_time_from"
        app:layout_constraintHorizontal_weight="4"
        app:layout_constraintStart_toEndOf="@id/txt_search_station_from"
        app:layout_constraintTop_toTopOf="@id/txt_search_station_from" />

    <TextView
        android:id="@+id/txt_search_time_from"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/departure"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/txt_search_time_to"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toEndOf="@id/txt_search_station_to"
        app:layout_constraintTop_toTopOf="@id/txt_search_station_from" />

    <TextView
        android:id="@+id/txt_search_time_to"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/arrival"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/img_search_icon"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toEndOf="@id/txt_search_time_from"
        app:layout_constraintTop_toTopOf="@id/txt_search_station_from" />

    <View
        android:id="@+id/img_search_icon"
        android:layout_width="18dp"
        android:layout_height="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/txt_search_time_to"
        app:layout_constraintTop_toTopOf="@id/txt_search_station_from" />

</androidx.constraintlayout.widget.ConstraintLayout>

